# showbase

./: Cargo.toml  README.md
.github/workflows/: scorecards-analysis.yml  website.yml
assets/: main.qml  player.qml  resources.qrc
docs/: CNAME  README.md  gatsby-config.js
docs/src/pages/: index.tsx
src/: main.rs
