[package]
name = "showbase"
version = "0.1.0"
authors = ["Elliot Murphy <statik@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/kindlyops/showbase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_qml = "0.5.0"

[build-dependencies]
qt_ritual_build = "0.5.0"